kube/httpserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
      - name: httpserver
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 5
        image: elvfan/httpserver:0.3
        resources:
          limits:
            cpu: "200m"
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        lifecycle:
          preStop:
            httpGet:
              path: /finalize
              port: 8080
      terminationGracePeriodSeconds: 60
  replicas: 2
